[package]
name = "rollout-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# Workspace pins `unsafe_code = "forbid"`; the C-ABI cdylib boundary is
# unavoidably unsafe (libloading::Symbol::get returns an unsafe pointer-cast).
# Downgrade to `deny` here so file-level `#[allow(unsafe_code)]` can compile
# in `src/modes/cdylib.rs` and `src/modes/abi.rs`. All unsafe is confined
# there and carries SAFETY comments.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[features]
default = ["cdylib", "pyo3", "sidecar"]
cdylib = ["dep:libloading"]
pyo3 = ["dep:pyo3"]
sidecar = ["dep:nix"]
dev-hot-reload = []

[dependencies]
rollout-core    = { path = "../rollout-core", version = "0.1" }
rollout-storage = { path = "../rollout-storage", version = "0.1" }
async-trait     = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
smol_str        = { workspace = true }
toml            = { workspace = true }
libloading           = { workspace = true, optional = true }
pyo3                 = { workspace = true, optional = true }
nix                  = { version = "0.30", default-features = false, features = ["signal"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
