[package]
name = "rollout-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tonic        = { workspace = true }
tonic-prost  = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
tonic-prost-build   = { workspace = true }
protoc-bin-vendored = { workspace = true }
