[package]
name = "rollout-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tonic        = { workspace = true }
tonic-prost  = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
tonic-prost-build   = { workspace = true }
protoc-bin-vendored = { workspace = true }

[package.metadata.cargo-machete]
# Runtime deps are used only by tonic-prost-build-generated code in OUT_DIR
# (`::prost::Message`, `::prost_types::Timestamp`, tonic server/client codegen).
# Machete cannot see through the build.rs codegen path.
ignored = ["prost", "prost-types", "tokio-stream", "tonic-prost"]
