[package]
name = "rollout-snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Snapshot orchestration (TrainState; Buffer/Process/EpisodicMemory enumerated) — TRAIN-03."

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rollout-storage = { path = "../rollout-storage", version = "0.1" }
rollout-cloud-local = { path = "../rollout-cloud-local", version = "0.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ulid = { workspace = true }
