[package]
name = "rollout-snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Snapshot orchestration (TrainState; Buffer/Process/EpisodicMemory enumerated) — TRAIN-03."

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rollout-storage = { path = "../rollout-storage", version = "0.1" }
rollout-cloud-local = { path = "../rollout-cloud-local", version = "0.1" }
# Cloud-witness dev-deps (Plan 05-07). Dev-deps are exempt from the dep-direction
# lint (invariant #9 filters DependencyKind::Normal only), so the layer-3 → layer-1
# edge here never ships in a production dependency closure.
rollout-cloud-aws = { path = "../rollout-cloud-aws", version = "0.1", features = ["aws"] }
rollout-cloud-gcp = { path = "../rollout-cloud-gcp", version = "0.1", features = ["gcp"] }
rollout-runtime-batch = { path = "../rollout-runtime-batch", version = "0.1", features = ["test-mock-backend"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
ndarray = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ulid = { workspace = true }
