[package]
name = "rollout-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait  = { workspace = true }
serde        = { workspace = true }
schemars     = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
smol_str     = { workspace = true }
redb         = { workspace = true }
postcard     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
