[package]
name = "rollout-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Phase 4: Postgres backend alongside embedded. sqlx 0.8 + PgListener.
postgres = ["dep:sqlx", "dep:uuid", "dep:async-stream", "dep:ulid"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait  = { workspace = true }
serde        = { workspace = true }
schemars     = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
smol_str     = { workspace = true }
redb         = { workspace = true }
postcard     = { workspace = true }

# Phase 4 — watch_stream surface needs BroadcastStream + BoxStream unconditionally.
tokio-stream = { workspace = true }
futures      = { workspace = true }

# Phase 4 — optional Postgres backend deps; gated by `postgres` feature.
sqlx         = { workspace = true, optional = true }
uuid         = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
ulid         = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# Phase 4 — testcontainers Postgres 16 integration test
testcontainers          = { workspace = true }
testcontainers-modules  = { workspace = true }
tracing-subscriber      = { workspace = true }
