# FIXTURE -- DO NOT BUILD. Read-only fixture for crates/rollout-core/tests/dependency_direction.rs.
# Simulates a forbidden dependency edge: an algo-layer crate listing a cloud-layer crate.
[package]
name    = "rollout-algo-ppo"
version = "0.0.0"
edition = "2021"

[dependencies]
rollout-cloud-aws = "0.1"

[package.metadata.cargo-machete]
# Fixture intentionally declares the forbidden edge under test. Do not "fix".
ignored = ["rollout-cloud-aws"]
