# FIXTURE -- DO NOT BUILD. Read-only fixture for crates/rollout-core/tests/dependency_direction.rs.
# Simulates a forbidden edge: rollout-cloud-aws depending on rollout-cloud-gcp (cross-provider).
# Exercises Phase-5 invariant #13 (cloud-aws ↮ cloud-gcp).
[package]
name    = "rollout-cloud-aws"
version = "0.0.0"
edition = "2021"

[dependencies]
rollout-cloud-gcp = "0.1"

[package.metadata.cargo-machete]
ignored = ["rollout-cloud-gcp"]
